# django-deovi

./: CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
django_deovi/: __init__.py  apps.py  breadcrumbs.py  dump.py  exceptions.py  loader.py  outputs.py  routers.py  settings.py  urls.py
django_deovi/admin/: __init__.py  device.py  directory.py  media.py
django_deovi/factories/: __init__.py  device.py  directory.py  dump.py  media.py
django_deovi/management/commands/: load_medias.py
django_deovi/migrations/: 0001_initial.py  0002_alter_directory_options_alter_mediafile_options_and_more.py  0003_device_last_update.py  0004_add_device_disk_usage_fields.py
django_deovi/models/: __init__.py  article.py  blog.py  device.py  directory.py  media.py
django_deovi/serializers/: __init__.py  article.py  blog.py  media.py
django_deovi/templates/django_deovi/: article_detail.html  base.html  blog_detail.html  blog_index.html  mediafile_detail.html
django_deovi/templates/django_deovi/device/: _tree-item.html  detail.html  index.html  tree.html
django_deovi/templates/django_deovi/directory/: detail.html
django_deovi/templatetags/: deovi.py
django_deovi/utils/: formatters.py  imaging.py  tests.py  tree.py
django_deovi/views/: __init__.py  article.py  blog.py  device.py  directory.py  media.py  mixins.py
django_deovi/viewsets/: __init__.py  media.py
docs/: conf.py  development.rst  django_settings.py  history.rst  index.rst  install.rst  requirements.txt
docs/django_app/: models.rst  serializers.rst  viewsets.rst
frontend/: .stylelintignore  package-lock.json  package.json  webpack.config.js
frontend/js/: main.js
frontend/scss/: main.scss
frontend/scss/bootbutt/: _defaults.scss
frontend/scss/bootbutt/generic/: _type.scss
frontend/scss/components/: _content.scss  _device-detail.scss  _header.scss
frontend/scss/objects/: _pagination.scss  _treegrid.scss
frontend/scss/settings/: _bootbutt.scss  _bootstrap.scss  _colors.scss  _fonts.scss  _icomoon_icons.scss  _post-bootstrap.scss  _site.scss  _utilities_addons.scss
frontend/scss/styleguide/: layout.scss  manifest.scss
frontend/scss/themes/zephyr/: _bootswatch.scss
sandbox/: urls.py
sandbox/settings/: base.py  demo.py  tests.py
sandbox/static-sources/css/: main.css
sandbox/static-sources/css/styleguide/: layout.css  manifest.css
sandbox/static-sources/favicon/: site.webmanifest
sandbox/static-sources/js/: main.js
sandbox/templates/: skeleton.html
tests/: conftest.py
tests/010_models/: 011_blog.py  011_dump.py  011_media.py  012_article.py  012_device.py  012_media.py  013_directory.py  013_media.py  014_mediafile.py
tests/020_factories/: 021_blog.py  021_dump.py  021_media.py  022_article.py  022_device.py  022_media.py  023_directory.py  023_media.py
tests/030_views/: 030_device.py  031_blog.py  031_media.py  032_article.py
tests/100_serializers/: 101_blog.py  101_media.py  102_article.py
tests/110_viewsets/: 111_blog.py  112_article.py
tests/200_dump/: 201_loader.py
tests/200_loader/: 201_loader_get_existing.py  202_loader_file_distribution.py  203_loader_create_files.py  204_loader_edit_files.py  205_loader_process_directory.py  210_load.py
tests/data_fixtures/: dump_directories.json  dump_series.json
