;;
;; Django Deovi package
;;
[metadata]
name = django-deovi
version = 0.5.0-pre.3
description = A Django application around Deovi
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-deovi
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 4.0

[options]
include_package_data = True
install_requires =
    Django>=4.0,<4.1
    djangorestframework>=3.13.0
    deovi
packages = find:
zip_safe = True

[options.extras_require]
breadcrumbs =
    django-view-breadcrumbs>=2.2.4
dev =
    flake8
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
    sphinx
    sphinx-rtd-theme
    livereload
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{38}-django{40}-api

[testenv]

deps =
    django40: Django>=4.0,<4.1
    django40-api: djangorestframework>=3.13.0

commands =
    pip install -e .[breadcrumbs,dev]
    pytest -vv tests
